# mjx-playground3

./: .gitignore  2021080221gm-00a9-0000-85adf647&tw=0.json  Dockerfile  README.md  mjx-env.py  pyproject.toml  test.py  torch-to-nakayokunaritai.py
.github/workflows/: python-lint.yml
divide-round-train-from-paifu/: readme.md
hyper-param-tuning-example/: readme.md  sample.py
learn-openai-gym/: cartpole-v1.py  gymnasium-lunar-landar.py  mountaincar.py  nncat.py  readme.md  sample.py
learn-torch/: cnn_error.md  torch-to-nakayokunaritai.py  torch_nn_functional_dropout.py  torchsample.py
mjai/: bot.py  gateway.py  orig.py  readme.md
rule-based-tsuyoi-agent/: readme.md  ruleBasedAgent.py  rules.md  toitsuAgent.py
supervised_learning_from_shantenBot/: 100games-shantenbots.py  README.md  battle_vs_shantenbots.py  model_shanten_100.pth  nn_samplecode.py  rl_gym.py  shantenbot-learning.py
supervised_learning_from_shantenBot/lightning_logs/version_0/: metrics.csv
supervised_learning_from_shantenBot/lightning_logs/version_0/checkpoints/: epoch=0-step=50718.ckpt
supervised_learning_from_shantenBot/lightning_logs/version_1/: metrics.csv
supervised_learning_from_shantenBot/lightning_logs/version_2/: metrics.csv
supervised_learning_from_shantenBot/lightning_logs/version_3/: metrics.csv
train-from-paifu/: battle_vs_shantenbots.py  battle_vs_shantenbots_cnn.py  battle_vs_shantenbots_oldagent.py  count_angles.js  mlp_agent_playground.py  read_from_mjxproto.new.py  read_from_mjxproto.old.py  read_from_mjxproto.py  readme.md  rl_gym.py  sample.py  supervised_leaning.py  supervised_learning2-cnn.py  supervised_learning2-cnn2.py  supervised_learning2.py  supervised_learning3-cnn2.py  supervised_learning3.py
transformer-playground/: fireworks.py
visualization/: akkaman.py  chatgpt-multiprocessing_speed_eval.py  readme.md  run_speed_benchmark.sh  sample.py  speed_benchmark.py  speed_eval.py  speed_eval_codon.py  speed_eval_numba.py
